# Bjorn

./: CMakeLists.txt  README.md
assets/: BRDFs.glb  CMakeLists.txt  complex_hierarchy.glb  cube.glb  cube.gltf  default.glb  multi_textured_scene.glb  multi_textured_scene.gltf  sphere.glb  textured_cube.glb
cmake/: Shaders.cmake
dependencies/: CMakeLists.txt
dependencies/glfw/: CMakeLists.txt
dependencies/glm/: CMakeLists.txt
dependencies/imgui/: CMakeLists.txt
dependencies/tinygltf/: CMakeLists.txt
dependencies/vma/: CMakeLists.txt
shaders/: CMakeLists.txt  compile.bat  deferred_geometry.frag.hlsl  deferred_geometry.vert.hlsl  deferred_lighting.frag.hlsl  forward.frag.hlsl  forward.hlsl  geometry_pass.frag.hlsl  geometry_pass.vert.hlsl  imgui_custom.vert.glsl  lighting_pass.frag.hlsl  lighting_pass.vert.hlsl  shader.slang  slang.spv
src/: Application.cpp  Application.hpp  Buffer.cpp  Buffer.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Common.cpp  Common.hpp  Device.cpp  Device.hpp  GBuffer.cpp  GBuffer.hpp  GltfLoader.cpp  GltfLoader.hpp  Image.cpp  Image.hpp  Input.cpp  Input.hpp  Main.cpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Object.cpp  Object.hpp  PipelineBuilder.cpp  PipelineBuilder.hpp  Raytracer.cpp  Renderer.cpp  Renderer.hpp  ResourceManager.cpp  ResourceManager.hpp  Scene.cpp  Scene.hpp  Swapchain.cpp  Swapchain.hpp  Texture.cpp  Texture.hpp  Transform.cpp  (+5 more)
src/archive/: ForwardPipeline.old
